# Simulation-of-Walking-Biped

./: CMakeLists.txt  README.md
biped_control/: CMakeLists.txt  package.xml  text.txt
biped_control/config/: joint_names_biped.yaml  package.xml  position_controller.yaml
biped_control/src/: biped.hpp  effort.py  sensor.py  zwInit  zwInit.cpp  zwInit.py
biped_control/src/SLWAVR_SINw50h45dCM11i20/: changeLtoR.csv  changeRtoL.csv  finishL.csv  finishR.csv  juncWL.csv  juncWR.csv  resetL.csv  resetR.csv  startL.csv  startR.csv  walkL.csv  walkR.csv
biped_control/src/SLWAVR_SQSINw40h45dCM11i20/: changeLtoR.csv  changeRtoL.csv  finishL.csv  finishR.csv  initialL.csv  initialR.csv  juncWL.csv  juncWR.csv  resetL.csv  resetR.csv  startL.csv  startR.csv  walkL.csv  walkR.csv
biped_control/src/SLWAVR_SQSINw50h45dCM11i20/: changeLtoR.csv  changeRtoL.csv  finishL.csv  finishR.csv  juncWL.csv  juncWR.csv  resetL.csv  resetR.csv  startL.csv  startR.csv  walkL.csv  walkR.csv
launch/: gazebo.launch  position_controller.launch
meshes/: femore_dx.STL  femore_sx.STL  piede_dx.STL  piede_sx.STL  sensore_dx1.STL  sensore_dx2.STL  sensore_dx3.STL  sensore_dx4.STL  sensore_sx1.STL  sensore_sx2.STL  sensore_sx3.STL  sensore_sx4.STL  tibia_dx.STL  tibia_sx.STL  virtual_alto_dx.STL  virtual_alto_sx.STL  virtual_basso_dx.STL  virtual_basso_sx.STL  virtual_piede_dx.STL  virtual_piede_sx.STL
urdf/: biped_sensor.csv  biped_sensor.gv  biped_sensor.urdf
worlds/: empty.world
